[gd_scene load_steps=2 format=2]

[ext_resource path="res://cenaPrincipal.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_top = 192.0
margin_right = 256.0
margin_bottom = 256.0
rect_pivot_offset = Vector2( 264, 48 )
text = "botão 1"

[node name="Button2" type="Button" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 256.0
text = "botão 2"

[node name="Button3" type="Button" parent="."]
margin_left = 768.0
margin_top = 192.0
margin_right = 1024.0
margin_bottom = 256.0
text = "botão 3"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 383.0
margin_top = 64.0
margin_right = 639.0
margin_bottom = 136.0

[node name="Label3" type="Label" parent="."]
margin_left = 384.0
margin_top = 16.0
margin_right = 632.0
margin_bottom = 64.0
text = "Digite seu numero"

[node name="Label" type="Label" parent="."]
margin_left = 389.0
margin_top = 326.0
margin_right = 637.0
margin_bottom = 374.0

[node name="Label2" type="Label" parent="."]
margin_left = 768.0
margin_top = 296.0
margin_right = 1016.0
margin_bottom = 352.0

[node name="Label4" type="Label" parent="."]
margin_left = 8.0
margin_top = 320.0
margin_right = 256.0
margin_bottom = 368.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 768.0
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 128.0

[node name="Label5" type="Label" parent="."]
margin_left = 768.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 152, 24 )
text = "Digite seu nome"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
